--- a/frontlineworker/pom.xml
+++ b/frontlineworker/pom.xml
@@ -68,63 +68,66 @@
                     <version>1.0</version>
                 </dependency>
 
+        <dependency>
+            <groupId>org.motechproject</groupId>
+            <artifactId>batch</artifactId>
+            <version>${motech.version}</version>
+        </dependency>
         <!--
 
+                               <dependency>
+                                   <groupId>org.springframework</groupId>
+                                   <artifactId>spring-core</artifactId>
+                                   <version>${spring.version}</version>
+                               </dependency>
 
-                       <dependency>
-                           <groupId>org.springframework</groupId>
-                           <artifactId>spring-core</artifactId>
-                           <version>${spring.version}</version>
-                       </dependency>
+                               <dependency>
+                                   <groupId>org.springframework.batch</groupId>
+                                   <artifactId>spring-batch-core</artifactId>
+                                   <version>${spring.batch.version}</version>
+                               </dependency>
+                               <dependency>
+                                   <groupId>org.springframework.batch</groupId>
+                                   <artifactId>spring-batch-infrastructure</artifactId>
+                                   <version>${spring.batch.version}</version>
+                               </dependency>
+-->
 
+                    </dependencies>
 
-                       <dependency>
-                           <groupId>org.springframework.batch</groupId>
-                           <artifactId>spring-batch-core</artifactId>
-                           <version>${spring.batch.version}</version>
-                       </dependency>
-                       <dependency>
-                           <groupId>org.springframework.batch</groupId>
-                           <artifactId>spring-batch-infrastructure</artifactId>
-                           <version>${spring.batch.version}</version>
-                       </dependency>
-       -->
+                    <repositories>
+                        <repository>
+                            <id>motech-repo</id>
+                            <name>MOTECH Maven Repository</name>
+                            <url>http://nexus.motechproject.org/content/repositories/public</url>
+                        </repository>
+                    </repositories>
 
-            </dependencies>
+                    <build>
+                        <plugins>
+                            <plugin>
+                                <groupId>org.apache.maven.plugins</groupId>
+                                <artifactId>maven-compiler-plugin</artifactId>
+                                <version>3.1</version>
+                                <configuration>
+                                    <source>1.7</source>
+                                    <target>1.7</target>
+                                </configuration>
+                            </plugin>
 
-            <repositories>
-                <repository>
-                    <id>motech-repo</id>
-                    <name>MOTECH Maven Repository</name>
-                    <url>http://nexus.motechproject.org/content/repositories/public</url>
-                </repository>
-            </repositories>
-
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <version>3.1</version>
-                        <configuration>
-                            <source>1.7</source>
-                            <target>1.7</target>
-                        </configuration>
-                    </plugin>
-
-                    <plugin>
-                        <groupId>org.apache.felix</groupId>
-                        <artifactId>maven-bundle-plugin</artifactId>
-                        <version>2.3.5</version>
-                        <extensions>true</extensions>
-                        <configuration>
-                            <instructions>
-                                <Blueprint-Enabled>true</Blueprint-Enabled>
-                                <Resource-Path>frontlineworker/resources</Resource-Path>
-                                <Context-Path>frontlineworker</Context-Path>
-                                <Export-Package>org.motechproject.nms.frontlineworker;version=${project.version},
-                                    org.motechproject.nms.frontlineworker.repository;version=${project.version},
-                                    <!-- Bug 17 -->
+                            <plugin>
+                                <groupId>org.apache.felix</groupId>
+                                <artifactId>maven-bundle-plugin</artifactId>
+                                <version>2.3.5</version>
+                                <extensions>true</extensions>
+                                <configuration>
+                                    <instructions>
+                                        <Blueprint-Enabled>true</Blueprint-Enabled>
+                                        <Resource-Path>frontlineworker/resources</Resource-Path>
+                                        <Context-Path>frontlineworker</Context-Path>
+                                        <Export-Package>org.motechproject.nms.frontlineworker;version=${project.version},
+                                            org.motechproject.nms.frontlineworker.repository;version=${project.version},
+                                            <!-- Bug 17 -->
                             org.motechproject.nms.frontlineworker.event.handler;version=${project.version},
                             org.motechproject.nms.frontlineworker.domain;version=${project.version},
                             org.motechproject.nms.frontlineworker.service;version=${project.version},
