--- a/frontlineworker/pom.xml
+++ b/frontlineworker/pom.xml
@@ -46,14 +46,6 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Scheduler -->
-        <dependency>
-            <groupId>${motech.groupId}</groupId>
-            <artifactId>motech-scheduler</artifactId>
-            <version>${motech.version}</version>
-        </dependency>
-
-
         <!-- Repository -->
         <dependency>
             <groupId>org.motechproject</groupId>
@@ -61,37 +53,6 @@
             <version>${motech.version}</version>
         </dependency>
 
-
-                <dependency>
-                    <groupId>javax.batch</groupId>
-                    <artifactId>javax.batch-api</artifactId>
-                    <version>1.0</version>
-                </dependency>
-
-        <dependency>
-            <groupId>org.motechproject</groupId>
-            <artifactId>batch</artifactId>
-            <version>${motech.version}</version>
-        </dependency>
-        <!--
-
-                               <dependency>
-                                   <groupId>org.springframework</groupId>
-                                   <artifactId>spring-core</artifactId>
-                                   <version>${spring.version}</version>
-                               </dependency>
-
-                               <dependency>
-                                   <groupId>org.springframework.batch</groupId>
-                                   <artifactId>spring-batch-core</artifactId>
-                                   <version>${spring.batch.version}</version>
-                               </dependency>
-                               <dependency>
-                                   <groupId>org.springframework.batch</groupId>
-                                   <artifactId>spring-batch-infrastructure</artifactId>
-                                   <version>${spring.batch.version}</version>
-                               </dependency>
--->
 
                     </dependencies>
 
@@ -133,31 +94,9 @@
                             org.motechproject.nms.frontlineworker.service;version=${project.version},
                             org.motechproject.nms.frontlineworker.service.impl;version=${project.version},
                             org.motechproject.nms.frontlineworker.constants;version=${project.version},
-                            org.motechproject.nms.frontlineworker.exception;version=${project.version},
-                            org.motechproject.nms.frontlineworker.scheduler;version=${project.version}
+                            org.motechproject.nms.frontlineworker.exception;version=${project.version}
                         </Export-Package>
                         <Import-Package>org.motechproject.osgi.web,
-                            org.springframework.batch.core.jsr.configuration.xml,
-                            org.springframework.batch.item.file.transform,
-                            org.springframework.batch.core.configuration.xml,
-                            org.springframework.batch.core.scope,
-                            org.springframework.batch.core.job.flow.support,
-                            org.springframework.batch.core.job.flow.support.state,
-                            org.springframework.batch.core.jsr,
-                            org.springframework.batch.core.jsr.launch,
-                            org.springframework.batch.core.resource,
-                            org.springframework.batch.core.launch.support,
-                            org.springframework.batch.core.explore.support,
-                            org.springframework.batch.core.configuration.support,
-                            org.springframework.batch.core.jsr.configuration.support,
-                            org.springframework.batch.item.database,
-                            org.springframework.batch.item.database.support,
-                            org.springframework.batch.core.repository.support,
-                            org.springframework.batch.support.transaction,
-                            org.motechproject.batch.service;version=${motech.version},
-                            org.motechproject.batch.exception;version=${motech.version},
-                            org.motechproject.batch.model;version=${motech.version},
-                            javax.batch.operations,
                             *
                         </Import-Package>
                     </instructions>
