--- a/frontlineworker/pom.xml
+++ b/frontlineworker/pom.xml
@@ -91,6 +91,7 @@
                             org.motechproject.nms.frontlineworker.domain;version=${project.version},
                             org.motechproject.nms.frontlineworker.service;version=${project.version},
                             org.motechproject.nms.frontlineworker.service.impl;version=${project.version},
+                            org.motechproject.nms.frontlineworker.exception;version=${project.version},
                         </Export-Package>
                         <Import-Package>org.motechproject.osgi.web,
                             *
