updated pom and added UIDisplayabel annotation

--- a/kilkariobd/pom.xml
+++ b/kilkariobd/pom.xml
@@ -20,14 +20,6 @@
     </properties>
 
     <dependencies>
-
-        <!-- dependency>
-            <groupId>com.jcraft</groupId>
-            <artifactId>jsch</artifactId>
-            <version>0.1.51</version>
-            <scope>provided</scope>
-        </dependency -->
-
         <dependency>
             <groupId>org.apache.servicemix.bundles</groupId>
             <artifactId>org.apache.servicemix.bundles.jsch</artifactId>
@@ -160,6 +152,38 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.8</version>
+                <executions>
+                    <execution>
+                        <id>copy</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>org.apache.servicemix.bundles</groupId>
+                                    <artifactId>org.apache.servicemix.bundles.jsch</artifactId>
+                                    <version>0.1.51_1</version>
+                                    <type>jar</type>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${user.home}/.motech/bundles</outputDirectory>
+                                    <destFileName>jcraft-jsch.jar</destFileName>
+                                </artifactItem>
+                            </artifactItems>
+                            <outputDirectory>${user.home}/.motech/bundles</outputDirectory>
+                            <overWriteReleases>false</overWriteReleases>
+                            <overWriteSnapshots>true</overWriteSnapshots>
+                        </configuration>
+                    </execution>
+
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
 </project>
